Resolve deprecation and unchecked compiler warnings